# chainbridge-substrate-chain

./: .gitignore  .travis.yml  Dockerfile  README.md  ui-types.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: ci.sh  ci_docker.sh
