[package]
authors = ['david@chainsafe.io']
build = 'build.rs'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'chainbridge-substrate-chain'
repository = 'https://github.com/ChainSafe/chainbridge-substrate-chain'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'chainbridge-substrate-chain'

[dependencies.chainbridge-substrate-chain-runtime]
path = '../runtime'
version = '2.0.0-rc6'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '0.8.0-rc6'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '0.8.0-rc6'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '0.8.0-rc6'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '0.8.0-rc6'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '0.8.0-rc6'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '0.8.0-rc6'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '0.8.0-rc6'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '0.8.0-rc6'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '0.8.0-rc6'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '0.8.0-rc6'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'

[dependencies]
jsonrpc-core = '14.0.3'
structopt = '0.3.8'

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
rev = 'be8bb186d87b9d2b47a2907c9b51ae1e252362c3'
version = '2.0.0-rc6'
